// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewLimitDialog/ViewLiimitDialog show notify upgrade button for non sys admin user 1`] = `
<div>
  <div
    class="Dialog dialog-back ViewLimitDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            />
          </div>
          <div
            class="toolbar--right"
          >
            <button
              aria-label="Close dialog"
              class="IconButton dialog__close size--medium"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="ViewLimitDialog_body"
        >
          <img
            alt="upgrade image"
            src="test-file-stub"
          />
          <h2
            class="header text-heading5"
          >
            Views per board limit reached
          </h2>
          <p
            class="text-heading1"
          >
            Notify your Admin to upgrade to our Professional or Enterprise plan.
          </p>
        </div>
        <div
          class="ViewLimitDialog_footer"
        >
          <button
            class="Button size--medium cancel"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="Button emphasis--primary size--medium primaryAction"
            type="button"
          >
            <span>
              Notify Admin
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewLimitDialog/ViewLiimitDialog show upgrade button for sys admin user 1`] = `
<div>
  <div
    class="Dialog dialog-back ViewLimitDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            />
          </div>
          <div
            class="toolbar--right"
          >
            <button
              aria-label="Close dialog"
              class="IconButton dialog__close size--medium"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="ViewLimitDialog_body"
        >
          <img
            alt="upgrade image"
            src="test-file-stub"
          />
          <h2
            class="header text-heading5"
          >
            Views per board limit reached
          </h2>
          <p
            class="text-heading1"
          >
            Upgrade to our Professional or Enterprise plan.
            <a
              href="https://mattermost.com/pl/pricing/"
              rel="noreferrer"
              target="_blank"
            >
              Learn more about our plans.
            </a>
          </p>
        </div>
        <div
          class="ViewLimitDialog_footer"
        >
          <button
            class="Button size--medium cancel"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="Button emphasis--primary size--medium primaryAction"
            type="button"
          >
            <span>
              Upgrade
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
